--- a/Home.css
+++ b/Home.css
@@ -14,7 +14,7 @@
 }
 
  .u-section-1-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url('images/FHS_0002.jpg');
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url('images/FHS_9843.jpg');
   background-position: 50% 50%;
 }
 
@@ -34,6 +34,7 @@
 }
 
 .u-section-1-1 .u-text-1 {
+  font-size: 6rem;
   margin: 12px 10px 0;
 }
 
@@ -54,10 +55,6 @@
   .u-section-1-1 .u-container-layout-1 {
     padding-top: 29px;
     padding-bottom: 29px;
-  }
-
-  .u-section-1-1 .u-text-1 {
-    font-size: 6rem;
   }
 
   .u-section-1-1 .u-text-2 {
@@ -89,11 +86,30 @@
 
 @media (max-width: 575px) {
   .u-section-1-1 .u-sheet-1 {
-    min-height: 218px;
+    min-height: 733px;
   }
 
   .u-section-1-1 .u-group-1 {
     width: 340px;
+    margin-right: auto;
+    margin-left: -44px;
+  }
+
+  .u-section-1-1 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1-1 .u-text-1 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-1-1 .u-text-2 {
+    width: auto;
+    margin-right: -2px;
+    margin-bottom: 0;
+    margin-left: 22px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 60px;
@@ -292,8 +308,6 @@
 
 .u-section-4 .u-text-1 {
   font-size: 3.75rem;
-  text-transform: none;
-  font-weight: 400;
   margin: 31px 45px 0 30px;
 }
 
@@ -304,7 +318,7 @@
 
 .u-section-4 .u-image-1 {
   min-height: 717px;
-  background-image: url("images/BeautyofanAfricanwoman30x40inches.jpg");
+  background-image: url("images/WhoamI.jpg");
   background-position: 50% 50%;
 }
 
@@ -327,7 +341,6 @@
   }
 
   .u-section-4 .u-text-1 {
-    line-height: 0.8;
     width: 510px;
     margin-top: 56px;
     margin-right: 215px;
@@ -373,8 +386,8 @@
   }
 
   .u-section-4 .u-text-1 {
-    font-size: 4.5rem;
     margin-top: -46px;
+    font-size: 2.25rem;
   }
 
   .u-section-4 .u-image-1 {
@@ -395,6 +408,7 @@
   .u-section-4 .u-text-1 {
     width: auto;
     margin-top: 4px;
+    font-size: 1.875rem;
   }
 
   .u-section-4 .u-image-1 {
@@ -444,7 +458,8 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  background-image: linear-gradient(#e5e5e5, black);
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-5 .u-container-layout-1 {
@@ -458,8 +473,9 @@
 }
 
 .u-section-5 .u-text-3 {
+  font-size: 1rem;
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: 20px auto 0;
+  margin: 19px auto 0;
 }
 
 .u-section-5 .u-list-item-2 {
@@ -469,7 +485,8 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  background-image: linear-gradient(#e5e5e5, black);
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-5 .u-container-layout-2 {
@@ -483,8 +500,9 @@
 }
 
 .u-section-5 .u-text-4 {
+  font-size: 1rem;
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: 20px auto 0;
+  margin: 19px auto 0;
 }
 
 .u-section-5 .u-list-item-3 {
@@ -494,7 +512,8 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  background-image: linear-gradient(#e5e5e5, black);
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-5 .u-container-layout-3 {
@@ -508,8 +527,9 @@
 }
 
 .u-section-5 .u-text-5 {
+  font-size: 1rem;
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: 20px auto 0;
+  margin: 19px auto 0;
 }
 
 .u-section-5 .u-btn-1 {
@@ -547,7 +567,6 @@
   .u-section-5 .u-text-4 {
     transition-duration: 0.5s;
     font-weight: 400;
-    font-size: 1rem;
     margin-top: 25px;
   }
 
@@ -560,7 +579,6 @@
   .u-section-5 .u-text-5 {
     transition-duration: 0.5s;
     font-weight: 400;
-    font-size: 1rem;
     margin-top: 25px;
   }
 }
@@ -1226,11 +1244,12 @@
 
 .u-section-6 .u-image-1 {
   min-height: 702px;
-  background-image: url("images/TheVision24x36inches.jpg");
+  background-image: url("images/WhatIDo.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-6 .u-container-layout-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   padding: 60px 30px;
 }
 
@@ -1245,7 +1264,7 @@
 
 .u-section-6 .u-text-1 {
   font-size: 3.75rem;
-  margin: 60px 0 0;
+  margin: 167px 0 0;
 }
 
 .u-section-6 .u-text-2 {
@@ -1255,25 +1274,25 @@
 
 @media (max-width: 1199px) {
    .u-section-6 {
-    min-height: 456px;
+    min-height: 479px;
   }
 
   .u-section-6 .u-image-1 {
-    min-height: 579px;
     --animation-custom_in-translate_x: 300px;
     --animation-custom_in-translate_y: 0px;
     --animation-custom_in-opacity: 0;
     --animation-custom_in-rotate: 180deg;
     --animation-custom_in-scale: 1;
+    min-height: 562px;
   }
 
   .u-section-6 .u-layout-cell-2 {
-    min-height: 579px;
     --animation-custom_in-translate_x: -300px;
     --animation-custom_in-translate_y: 0px;
     --animation-custom_in-opacity: 0;
     --animation-custom_in-rotate: 0deg;
     --animation-custom_in-scale: 1;
+    min-height: 602px;
   }
 
   .u-section-6 .u-container-layout-2 {
@@ -1284,12 +1303,12 @@
 
 @media (max-width: 991px) {
    .u-section-6 {
-    min-height: 320px;
+    min-height: 307px;
   }
 
   .u-section-6 .u-image-1 {
-    min-height: 443px;
     background-position: 26.97% 50%;
+    min-height: 430px;
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -1309,11 +1328,11 @@
 
 @media (max-width: 767px) {
    .u-section-6 {
-    min-height: 547px;
+    min-height: 546px;
   }
 
   .u-section-6 .u-image-1 {
-    min-height: 686px;
+    min-height: 569px;
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -1324,11 +1343,19 @@
     padding-left: 50px;
     padding-right: 50px;
   }
+
+  .u-section-6 .u-text-1 {
+    font-size: 2.25rem;
+  }
 }
 
 @media (max-width: 575px) {
    .u-section-6 {
-    min-height: 336px;
+    min-height: 335px;
+  }
+
+  .u-section-6 .u-image-1 {
+    min-height: 358px;
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -1336,142 +1363,244 @@
     padding-bottom: 30px;
   }
 
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 363px;
+  }
+
   .u-section-6 .u-container-layout-2 {
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 30px;
   }
-}.u-section-7 .u-sheet-1 {
-  min-height: 592px;
+
+  .u-section-6 .u-text-1 {
+    font-size: 1.875rem;
+    width: auto;
+    margin-top: 83px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: auto;
+  }
+} .u-section-7 {
+  background-image: none;
+  min-height: 459px;
 }
 
-.u-section-7 .u-layout-wrap-1 {
-  margin-top: 60px;
-  margin-bottom: 60px;
-  margin-left: auto;
+.u-section-7 .u-shape-1 {
+  height: 219px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.u-section-7 .u-layout-cell-1 {
-  min-height: 472px;
+.u-section-7 .u-list-1 {
+  width: 850px;
+  margin: -147px auto 60px;
+}
+
+.u-section-7 .u-repeater-1 {
+  grid-template-columns: repeat(3, calc(33.3333% - 14px));
+  min-height: 302px;
+  grid-auto-columns: calc(33.3333% - 14px);
+  grid-gap: 21px;
+}
+
+.u-section-7 .u-list-item-1 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-7 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 30px;
 }
 
-.u-section-7 .u-form-1 {
-  height: 411px;
-  width: 510px;
-  margin: 0 auto;
+.u-section-7 .u-icon-1 {
+  height: 49px;
+  width: 49px;
+  margin: 0 88px 0 73px;
+  padding: 0;
 }
 
-.u-section-7 .u-form-group-1 {
-  margin-left: auto;
+.u-section-7 .u-text-1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 35px 0 0;
 }
 
-.u-section-7 .u-form-group-2 {
-  margin-left: auto;
+.u-section-7 .u-text-2 {
+  margin: 19px 0 0;
 }
 
-.u-section-7 .u-form-group-3 {
-  margin-left: auto;
-}
-
-.u-section-7 .u-form-group-4 {
-  margin-left: auto;
-}
-
-.u-section-7 .u-btn-1 {
+.u-section-7 .u-list-item-2 {
   background-image: none;
-  margin-left: auto;
-}
-
-.u-section-7 .u-layout-cell-2 {
-  min-height: 472px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-7 .u-container-layout-2 {
   padding: 30px;
 }
 
-.u-section-7 .u-image-1 {
-  height: 396px;
-  margin-top: 0;
-  margin-bottom: 0;
+.u-section-7 .u-icon-2 {
+  height: 49px;
+  width: 49px;
+  margin: 0 88px 0 73px;
+  padding: 0;
+}
+
+.u-section-7 .u-text-3 {
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 35px 0 0;
+}
+
+.u-section-7 .u-text-4 {
+  margin: 19px 0 0;
+}
+
+.u-section-7 .u-list-item-3 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-7 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-7 .u-icon-3 {
+  height: 49px;
+  width: 49px;
+  margin: 0 88px 0 73px;
+  padding: 0;
+}
+
+.u-section-7 .u-text-5 {
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 35px 0 0;
+}
+
+.u-section-7 .u-text-6 {
+  margin: 19px 0 0;
+}
+
+.u-section-7 .u-btn-1 {
+  border-style: solid;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 509px;
+   .u-section-7 {
+    min-height: 902px;
   }
 
-  .u-section-7 .u-layout-wrap-1 {
-    margin-left: initial;
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: repeat(3, calc(33.333333333333336% - 14px));
+    min-height: 207px;
+    grid-auto-columns: calc(33.333333333333336% - 14px);
   }
 
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 471px;
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
-  .u-section-7 .u-form-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 389px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: 269px;
-    --animation-custom_in-translate_x: 0px;
-    --animation-custom_in-translate_y: 0px;
-    --animation-custom_in-opacity: 0;
-    --animation-custom_in-rotate: 0deg;
-    --animation-custom_in-scale: 0.3;
+  .u-section-7 .u-container-layout-3 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 418px;
+   .u-section-7 {
+    min-height: 1177px;
   }
 
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-7 .u-list-1 {
+    width: 720px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 471px;
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: repeat(2, calc(50% - 10.5px));
+    min-height: 494px;
+    grid-auto-columns: calc(50% - 10.5px);
   }
 
-  .u-section-7 .u-image-1 {
-    height: 279px;
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-7 .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 931px;
+   .u-section-7 {
+    min-height: 1560px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 340px;
+  .u-section-7 .u-list-1 {
+    width: 540px;
+  }
+
+  .u-section-7 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .u-section-7 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-7 .u-container-layout-3 {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 622px;
+   .u-section-7 {
+    min-height: 901px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 214px;
+  .u-section-7 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: 100%;
+    grid-auto-columns: 100%;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-7 .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
