--- a/Project.css
+++ b/Project.css
@@ -1198,7 +1198,7 @@
 
 .u-section-2 .u-repeater-1 {
   grid-template-columns: repeat(3, 33.3333%);
-  min-height: 880px;
+  min-height: 3366px;
   grid-gap: 0px;
 }
 
@@ -1370,10 +1370,220 @@
   margin: 20px 0 0;
 }
 
+.u-section-2 .u-container-layout-9 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-9 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-17 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-18 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-10 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-10 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-19 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-20 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-11 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-11 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-21 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-22 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-12 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-12 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-23 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-24 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-13 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-13 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-25 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-26 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-14 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-14 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-27 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-28 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-15 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-15 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-29 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-30 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-16 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-16 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-31 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-32 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-17 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-17 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-33 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-34 {
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-container-layout-18 {
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-image-18 {
+  height: 430px;
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 0px 0px 16px 0px rgba(128,128,128,0.77);
+}
+
+.u-section-2 .u-text-35 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 20px 6px 0;
+}
+
+.u-section-2 .u-text-36 {
+  margin: 20px 0 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(3, 33.333333333333336%);
-    min-height: 726px;
+    min-height: 2775px;
   }
 
   .u-section-2 .u-image-1 {
@@ -1447,12 +1657,102 @@
     margin-right: 0;
     margin-left: 0;
   }
+
+  .u-section-2 .u-image-9 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-17 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-10 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-19 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-11 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-21 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-12 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-23 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-13 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-25 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-14 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-27 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-15 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-29 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-16 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-31 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-17 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-33 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-18 {
+    height: 340px;
+  }
+
+  .u-section-2 .u-text-35 {
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
-    min-height: 1112px;
+    min-height: 4782px;
   }
 
   .u-section-2 .u-image-1 {
@@ -1484,6 +1784,46 @@
   }
 
   .u-section-2 .u-image-8 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-9 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-10 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-11 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-12 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-13 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-14 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-15 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-16 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-17 {
+    height: 403px;
+  }
+
+  .u-section-2 .u-image-18 {
     height: 403px;
   }
 }
@@ -1564,6 +1904,96 @@
   .u-section-2 .u-image-8 {
     height: 699px;
   }
+
+  .u-section-2 .u-container-layout-9 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-9 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-10 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-11 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-11 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-12 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-12 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-13 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-13 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-14 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-14 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-15 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-15 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-16 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-16 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-17 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-17 {
+    height: 699px;
+  }
+
+  .u-section-2 .u-container-layout-18 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-18 {
+    height: 699px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -1596,6 +2026,46 @@
   }
 
   .u-section-2 .u-image-8 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-9 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-10 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-11 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-12 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-13 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-14 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-15 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-16 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-17 {
+    height: 430px;
+  }
+
+  .u-section-2 .u-image-18 {
     height: 430px;
   }
 }
